# slika

./: Haskii.hs  Shake.hs  Slika.hs  slika.cabal  slika.nix
Control/: Slika.hs
Control/Slika/: Juicy.hs
Slika/: Juicy.hs
haskii/: Main.hs
slika/: Main.hs
