cabal-version:       2.4
name:                slika
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              jrn
-- copyright:
category:            Graphics
extra-source-files:  CHANGELOG.md

executable haskii
  main-is:             Haskii.hs
  exposed-modules:     Slika, Slika.Juicy
  build-depends: 
    array,
    base ^>=4.12.0.0,
    bytestring,
    comonad,
    deepseq,
    lens,
    linear,
    JuicyPixels,
    vector,
    vector-algorithms,
    colour,
    shake,
    optparse-applicative,
  default-language:    Haskell2010
  ghc-options: -O2

